--- a/.charts/tink-backend-aggregation-agents/templates/de/alerts.yaml
+++ b/.charts/tink-backend-aggregation-agents/templates/de/alerts.yaml
@@ -223,7 +223,7 @@ spec:
           {{ .Values.grafanaLink }}
         summary: Login success rate is between 10 - 20% ( <{ $value }> ) the last 6 hours because of all errors.
         tags: {{ .Values.tags }}
-        
+
     - alert: long_term_all_error_below_90_de
       expr: |
         # Login failure the last 6 hours
@@ -280,11 +280,11 @@ spec:
     #################################
     - alert: agent_refreshes_below45_greater35_due_to_all_error_for_specific_product_in_de
       expr: |
-        (sum by (className,type) (tink_agent_refresh_total{provider_type!="test", {{ .Values.allErrorsRefresh }}, market="DE"}))
-            / (sum by (className,type) (tink_agent_refresh_total{provider_type!="test", market="DE"})) < 0.45
-        and (sum by (className,type) (tink_agent_refresh_total{provider_type!="test", {{ .Values.allErrorsRefresh }}, market="DE"}))
-            / (sum by (className,type) (tink_agent_refresh_total{provider_type!="test", market="DE"})) >= 0.35
-         and sum by (className,type) (tink_agent_refresh_total{provider_type!="test", market="DE"}) > 20
+        (sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", {{ .Values.allErrorsRefresh }}, market="DE"}[60m])))
+            / (sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", market="DE"}[60m]))) < 0.45
+        and (sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", {{ .Values.allErrorsRefresh }}, market="DE"}[60m])))
+            / (sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", market="DE"}[60m]))) >= 0.35
+         and sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", market="DE"}[60m])) > 20
       for: 30m
       labels:
         severity: ping
@@ -299,11 +299,11 @@ spec:
 
     - alert: agent_refreshes_below35_greater25_due_to_all_error_for_specific_product_in_de
       expr: |
-        (sum by (className,type) (tink_agent_refresh_total{provider_type!="test", {{ .Values.allErrorsRefresh }}, market="DE"}))
-            / (sum by (className,type) (tink_agent_refresh_total{provider_type!="test", market="DE"})) < 0.35
-        and (sum by (className,type) (tink_agent_refresh_total{provider_type!="test", {{ .Values.allErrorsRefresh }}, market="DE"}))
-            / (sum by (className,type) (tink_agent_refresh_total{provider_type!="test", market="DE"})) >= 0.25
-         and sum by (className,type) (tink_agent_refresh_total{provider_type!="test", market="DE"}) > 20
+        (sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", {{ .Values.allErrorsRefresh }}, market="DE"}[60m])))
+            / (sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", market="DE"}[60m]))) < 0.35
+        and (sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", {{ .Values.allErrorsRefresh }}, market="DE"}[60m])))
+            / (sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", market="DE"}[60m]))) >= 0.25
+         and sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", market="DE"}[60m])) > 20
       for: 30m
       labels:
         severity: urgent
@@ -318,11 +318,11 @@ spec:
 
     - alert: agent_refreshes_below25_greater15_due_to_all_error_for_specific_product_in_de
       expr: |
-        (sum by (className,type) (tink_agent_refresh_total{provider_type!="test", {{ .Values.allErrorsRefresh }}, market="DE"}))
-            / (sum by (className,type) (tink_agent_refresh_total{provider_type!="test", market="DE"})) < 0.25
-        and (sum by (className,type) (tink_agent_refresh_total{provider_type!="test", {{ .Values.allErrorsRefresh }}, market="DE"}))
-            / (sum by (className,type) (tink_agent_refresh_total{provider_type!="test", market="DE"})) >= 0.15
-         and sum by (className,type) (tink_agent_refresh_total{provider_type!="test", market="DE"}) > 20
+        (sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", {{ .Values.allErrorsRefresh }}, market="DE"}[60m])))
+            / (sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", market="DE"}[60m]))) < 0.25
+        and (sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", {{ .Values.allErrorsRefresh }}, market="DE"}[60m])))
+            / (sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", market="DE"}[60m]))) >= 0.15
+         and sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", market="DE"}[60m])) > 20
       for: 30m
       labels:
         severity: urgent
@@ -337,9 +337,9 @@ spec:
 
     - alert: agent_refreshes_below15_due_to_all_error_for_specific_product_in_de
       expr: |
-        (sum by (className,type) (tink_agent_refresh_total{provider_type!="test", {{ .Values.allErrorsRefresh }}, market="DE"}))
-            / (sum by (className,type) (tink_agent_refresh_total{provider_type!="test", market="DE"})) < 0.15
-         and sum by (className,type) (tink_agent_refresh_total{provider_type!="test", market="DE"}) > 20
+        (sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", {{ .Values.allErrorsRefresh }}, market="DE"}[60m])))
+            / (sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", market="DE"}[60m]))) < 0.15
+         and sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", market="DE"}[60m])) > 20
       for: 30m
       labels:
         severity: urgent
@@ -358,11 +358,11 @@ spec:
 
     - alert: agent_refreshes_below60_greater50_due_to_partially_completed_error_for_specific_product_in_de
       expr: |
-        (sum by (className,type) (tink_agent_refresh_total{provider_type!="test", {{ .Values.partiallyCompletedErrorRefresh }}, market="DE"}))
-            / (sum by (className,type) (tink_agent_refresh_total{provider_type!="test", market="DE"})) < 0.6
-        and (sum by (className,type) (tink_agent_refresh_total{provider_type!="test", {{ .Values.partiallyCompletedErrorRefresh }}, market="DE"}))
-            / (sum by (className,type) (tink_agent_refresh_total{provider_type!="test", market="DE"})) >= 0.5
-         and sum by (className,type) (tink_agent_refresh_total{provider_type!="test", market="DE"}) > 20
+        (sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", {{ .Values.partiallyCompletedErrorRefresh }}, market="DE"}[60m])))
+            / (sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", market="DE"}[60m]))) < 0.6
+        and (sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", {{ .Values.partiallyCompletedErrorRefresh }}, market="DE"}[60m])))
+            / (sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", market="DE"}[60m]))) >= 0.5
+         and sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", market="DE"}[60m])) > 20
       for: 30m
       labels:
         severity: ping
@@ -377,11 +377,11 @@ spec:
 
     - alert: agent_refreshes_below50_greater40_due_to_partially_completed_error_for_specific_product_in_de
       expr: |
-        (sum by (className,type) (tink_agent_refresh_total{provider_type!="test", {{ .Values.partiallyCompletedErrorRefresh }}, market="DE"}))
-            / (sum by (className,type) (tink_agent_refresh_total{provider_type!="test", market="DE"})) < 0.5
-        and (sum by (className,type) (tink_agent_refresh_total{provider_type!="test", {{ .Values.partiallyCompletedErrorRefresh }}, market="DE"}))
-            / (sum by (className,type) (tink_agent_refresh_total{provider_type!="test", market="DE"})) >= 0.4
-         and sum by (className,type) (tink_agent_refresh_total{provider_type!="test", market="DE"}) > 20
+        (sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", {{ .Values.partiallyCompletedErrorRefresh }}, market="DE"}[60m])))
+            / (sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", market="DE"}[60m]))) < 0.5
+        and (sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", {{ .Values.partiallyCompletedErrorRefresh }}, market="DE"}[60m])))
+            / (sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", market="DE"}[60m]))) >= 0.4
+         and sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", market="DE"}[60m])) > 20
       for: 30m
       labels:
         severity: urgent
@@ -396,11 +396,11 @@ spec:
 
     - alert: agent_refreshes_below40_greater30_due_to_partially_completed_error_for_specific_product_in_de
       expr: |
-        (sum by (className,type) (tink_agent_refresh_total{provider_type!="test", {{ .Values.partiallyCompletedErrorRefresh }}, market="DE"}))
-            / (sum by (className,type) (tink_agent_refresh_total{provider_type!="test", market="DE"})) < 0.4
-        and (sum by (className,type) (tink_agent_refresh_total{provider_type!="test", {{ .Values.partiallyCompletedErrorRefresh }}, market="DE"}))
-            / (sum by (className,type) (tink_agent_refresh_total{provider_type!="test", market="DE"})) >= 0.3
-         and sum by (className,type) (tink_agent_refresh_total{provider_type!="test", market="DE"}) > 20
+        (sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", {{ .Values.partiallyCompletedErrorRefresh }}, market="DE"}[60m])))
+            / (sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", market="DE"}[60m]))) < 0.4
+        and (sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", {{ .Values.partiallyCompletedErrorRefresh }}, market="DE"}[60m])))
+            / (sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", market="DE"}[60m]))) >= 0.3
+         and sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", market="DE"}[60m])) > 20
       for: 30m
       labels:
         severity: urgent
@@ -415,9 +415,9 @@ spec:
 
     - alert: agent_refreshes_below30_due_to_partially_completed_error_for_specific_product_in_de
       expr: |
-        (sum by (className,type) (tink_agent_refresh_total{provider_type!="test", {{ .Values.partiallyCompletedErrorRefresh }}, market="DE"}))
-            / (sum by (className,type) (tink_agent_refresh_total{provider_type!="test", market="DE"})) < 0.3
-         and sum by (className,type) (tink_agent_refresh_total{provider_type!="test", market="DE"}) > 20
+        (sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", {{ .Values.partiallyCompletedErrorRefresh }}, market="DE"}[60m])))
+            / (sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", market="DE"}[60m]))) < 0.3
+         and sum by (className,type) (increase(tink_agent_refresh_total{provider_type!="test", market="DE"}[60m])) > 20
       for: 30m
       labels:
         severity: urgent
