fix(networkpolicies): use correct label selector for prometheus

--- a/.charts/tink-backend-aggregation-java11/templates/networkpolicy.yaml
+++ b/.charts/tink-backend-aggregation-java11/templates/networkpolicy.yaml
@@ -19,7 +19,7 @@ spec:
     from:
     - podSelector:
         matchLabels:
-          app: prometheus
+          prometheus-app: prometheus
     - namespaceSelector:
         matchLabels:
           service: monitoring-prometheus
