--- a/.charts/tink-backend-integration/templates/networkpolicy.yaml
+++ b/.charts/tink-backend-integration/templates/networkpolicy.yaml
@@ -28,7 +28,7 @@ spec:
     from:
     - podSelector:
         matchLabels:
-          app: prometheus
+          prometheus-app: prometheus
     - namespaceSelector:
         matchLabels:
           service: monitoring-prometheus
