--- a/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/es/banks/openbank/manual/BUILD
+++ b/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/es/banks/openbank/manual/BUILD
@@ -1,26 +1,23 @@
 load("//tools/bzl:junit.bzl", "junit_test")
 
 junit_test(
-    name = "openbank",
+    name = "openbank_manual",
     srcs = glob(["**/*.java"]),
     data = [
-        "//data:agent_unit_tests",
-        "//src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/es/banks/openbank/resources",
+        "//data:aggregation_test",
+        "//data:provider_configurations",
+        "//etc:development",
     ],
     visibility = ["//visibility:public"],
     deps = [
         "//src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/es/banks/openbank",
+        "//src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/serviceproviders/openbanking/redsys",
         "//src/integration/api/src/main/java/se/tink/backend/agents/rpc",
         "//src/integration/credentials:service",
-        "//src/integration/identity_data",
         "//src/integration/lib",
-        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/exceptions/bankservice",
-        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/request",
-        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/response",
         "//src/integration/lib/src/test/java/se/tink/backend/aggregation/agents/framework",
-        "//src/libraries/agent-storage",
-        "//src/libraries/serialization",
         "//third_party:io_vavr",
+        "//third_party:org_assertj_assertj_core",
         "//third_party:org_mockito_mockito_core",
         "@aggregation//:com_fasterxml_jackson_core_jackson_databind",
     ],
