--- a/etc/test.yml
+++ b/etc/test.yml
@@ -2548,6 +2548,11 @@ agentsServiceConfiguration:
         clientId: dummyClientId
         clientSecret: dummyClientSecret
         redirectUrl: https://127.0.0.1:7357/api/v1/thirdparty/callback
+    f12591a421393f1ba928d3ca69ffff83:
+      tink:
+        clientId: dummyClientId
+        clientSecret: dummyClientSecret
+        redirectUrl: https://127.0.0.1:7357/api/v1/thirdparty/callback
     6c3180541f29438694de737112c6bfca:
       tink:
         clientId: dummyClientId
