--- a/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/es/banks/openbank/BUILD
+++ b/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/es/banks/openbank/BUILD
@@ -21,6 +21,7 @@ junit_test(
         "//src/libraries/agent-storage",
         "//src/libraries/serialization",
         "//third_party:io_vavr",
+        "//third_party:org_assertj_assertj_core",
         "//third_party:org_mockito_mockito_core",
         "@aggregation//:com_fasterxml_jackson_core_jackson_databind",
     ],
