feat(MANY/Unicredit): Fixed transactions periods for Unicredits
[NZG-626]

--- a/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/hu/openbanking/unicredit/BUILD
+++ b/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/hu/openbanking/unicredit/BUILD
@@ -12,11 +12,14 @@ junit_test(
     deps = [
         "//src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/hu/openbanking/unicredit",
         "//src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/serviceproviders/openbanking/unicredit",
+        "//src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/serviceproviders/openbanking/unicredit",
         "//src/integration/amount",
         "//src/integration/api/src/main/java/se/tink/backend/agents/rpc",
+        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/agents/componentproviders",
         "//src/integration/lib/src/test/java/se/tink/backend/aggregation/agents/framework",
         "//src/integration/payment:enums",
         "//src/integration/payment:rpc",
+        "//third_party:org_assertj_assertj_core",
         "//third_party:org_mockito_mockito_core",
         "@tink_backend//src/libraries/account_identifier",
     ],
