--- a/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/pt/banks/bancobpi/BUILD
+++ b/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/pt/banks/bancobpi/BUILD
@@ -20,6 +20,7 @@ java_library(
         "//src/libraries/agent-storage",
         "//src/libraries/i18n",
         "//third_party:com_sun_jersey_jersey_core",
+        "//third_party:lombok_libs",
         "//third_party:org_apache_httpcomponents_httpclient",
         "//third_party:org_iban4j_iban4j",
         "//third_party:org_json_json",
