--- a/src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/utils/supplementalfields/BUILD
+++ b/src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/utils/supplementalfields/BUILD
@@ -8,6 +8,7 @@ java_library(
         "//src/integration/api/src/main/java/se/tink/backend/agents/rpc",
         "//src/integration/lib:annotations",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/agents",
+        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/exceptions",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/utils/berlingroup",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/utils",
         "//src/libraries/i18n",
