feat(AAP): rsi client provider added

--- a/.charts/tink-backend-aggregation/values/aggregation-production.yaml
+++ b/.charts/tink-backend-aggregation/values/aggregation-production.yaml
@@ -164,6 +164,8 @@ clients:
     aggregatorIdentifier: "Evo Banco"
   es-evobanco-production:
     aggregatorIdentifier: "Evo Banco"
+  es-rsi-testing:
+    aggregatorIdentifier: "RSI"
   evobanco-testing:
     aggregatorIdentifier: "Evo Banco"
   fintonic-production:
