--- a/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/legacy/banks/lansforsakringar/BUILD
+++ b/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/legacy/banks/lansforsakringar/BUILD
@@ -9,6 +9,7 @@ java_library(
         "//src/integration/api/src/main/java/se/tink/backend/agents/rpc",
         "//src/integration/lib",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/annotations",
+        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/http/request",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/source_info",
         "//src/integration/models",
         "//src/integration/transfer:enums",
