--- a/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/es/banks/bankinter/BUILD
+++ b/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/es/banks/bankinter/BUILD
@@ -38,6 +38,7 @@ java_library(
         "//third_party:org_apache_httpcomponents_httpcore",
         "//third_party:org_assertj_assertj_core",
         "//third_party:org_bouncycastle_bcprov_jdk15on",
+        "//third_party:org_json_json",
         "//third_party:org_jsoup_jsoup",
         "//third_party:org_slf4j_slf4j_api",
         "@aggregation//:com_fasterxml_jackson_core_jackson_annotations",
