chore(OB/SE/NordeaBusiness): added agent build to agentfactory"
TC-4504

--- a/src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/agentfactory/BUILD
+++ b/src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/agentfactory/BUILD
@@ -413,6 +413,7 @@ java_library(
         "//src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/se/openbanking/alandsbanken",
         "//src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/se/openbanking/business/danskebank",
         "//src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/se/openbanking/business/handelsbanken",
+        "//src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/se/openbanking/business/nordea",
         "//src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/se/openbanking/business/seb",
         "//src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/se/openbanking/danskebank",
         "//src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/se/openbanking/entercard/coop",
