--- a/src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/consent/BUILD
+++ b/src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/consent/BUILD
@@ -6,6 +6,8 @@ java_library(
     visibility = ["//visibility:public"],
     deps = [
         "//src/integration/credentials/src/main/java/se/tink/libraries/credentials/service",
+        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/utils/berlingroup",
+        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/agents/componentproviders",
         "//third_party:lombok_libs",
         "//third_party:org_slf4j_slf4j_api",
         "@aggregation//:com_google_guava_guava",
