--- a/src/integration/lib/src/test/java/se/tink/backend/aggregation/agents/consent/BUILD
+++ b/src/integration/lib/src/test/java/se/tink/backend/aggregation/agents/consent/BUILD
@@ -7,6 +7,9 @@ junit_test(
     deps = [
         "//src/integration/credentials/src/main/java/se/tink/libraries/credentials/service",
         "//src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/consent",
+        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/agents/utils/berlingroup",
+        "//src/integration/lib/src/main/java/se/tink/backend/aggregation/nxgen/agents/componentproviders",
+        "//third_party:lombok_libs",
         "//third_party:org_assertj_assertj_core",
         "//third_party:org_mockito_mockito_core",
         "@aggregation//:com_google_guava_guava",
