chore(millennium): typo fix

--- a/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/pl/openbanking/millennium/BUILD
+++ b/src/integration/agents/src/test/java/se/tink/backend/aggregation/agents/nxgen/pl/openbanking/millennium/BUILD
@@ -1,7 +1,7 @@
 load("//tools/bzl:junit.bzl", "junit_test")
 
 junit_test(
-    name = "millenium",
+    name = "millennium",
     srcs = glob(["*.java"]),
     data = ["//:agent_test_data"],
     tags = [
@@ -10,7 +10,7 @@ junit_test(
     ],
     visibility = ["//visibility:public"],
     runtime_deps = [
-        "//src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/pl/openbanking/millenium",
+        "//src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/pl/openbanking/millennium",
     ],
     deps = [
         "//src/integration/amount",
