--- a/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/pl/openbanking/millennium/BUILD
+++ b/src/integration/agents/src/main/java/se/tink/backend/aggregation/agents/nxgen/pl/openbanking/millennium/BUILD
@@ -1,7 +1,7 @@
 load("@rules_java//java:defs.bzl", "java_library")
 
 java_library(
-    name = "millenium",
+    name = "millennium",
     srcs = glob(["**/*.java"]),
     visibility = ["//visibility:public"],
     deps = [
