fix(TPA-959): enable retry policy for tppsecrets

--- a/.charts/tink-backend-aggregation-java11/values/aggregation-production.yaml
+++ b/.charts/tink-backend-aggregation-java11/values/aggregation-production.yaml
@@ -464,7 +464,7 @@ clients:
 tppSecretsServiceConfiguration:
   certificatesLocation: "cluster"
   enabled: true
-  enabledRetryPolicy: false
+  enabledRetryPolicy: true
 
 debugLogFrequencyPercent: 100
 longTermStorageDisputeBasePrefix: "long-term-payments-dispute"
