--- a/.charts/tink-backend-aggregation/values/aggregation-production.yaml
+++ b/.charts/tink-backend-aggregation/values/aggregation-production.yaml
@@ -468,7 +468,7 @@ clients:
 tppSecretsServiceConfiguration:
   certificatesLocation: "cluster"
   enabled: true
-  enabledRetryPolicy: false
+  enabledRetryPolicy: true
 
 debugLogFrequencyPercent: 100
 longTermStorageDisputeBasePrefix: "long-term-payments-dispute"
